gobmkida/c3/dfa_end
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1355:12: error: expected expression
*( _OWORD *)( i + 12122544) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1355:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 12122544) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1356:12: error: expected expression
*( _OWORD *)( i + 12122528) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1356:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 12122528) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1357:12: error: expected expression
*( _OWORD *)( i + 12122512) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1357:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 12122512) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1358:12: error: expected expression
*( _OWORD *)( i + 12122496) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1358:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 12122496) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1359:12: error: expected expression
*( _OWORD *)( i + 12122480) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1359:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 12122480) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1360:12: error: expected expression
*( _OWORD *)( i + 12122464) = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1360:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( i + 12122464) = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1361:12: error: expected expression
*( _OWORD *)aux_dfa[i / 0x78].name = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1361:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_dfa[i / 0x78].name = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1368:12: error: expected expression
*( _OWORD *)&aux_temp.max_states = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1368:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aux_temp.max_states = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1369:12: error: expected expression
*( _OWORD *)&aux_temp.pre_rotated = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1369:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aux_temp.pre_rotated = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1370:12: error: expected expression
*( _OWORD *)&aux_temp.name[64] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1370:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aux_temp.name[64] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1371:12: error: expected expression
*( _OWORD *)&aux_temp.name[48] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1371:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aux_temp.name[48] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1372:12: error: expected expression
*( _OWORD *)&aux_temp.name[32] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1372:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aux_temp.name[32] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1373:12: error: expected expression
*( _OWORD *)&aux_temp.name[16] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1373:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&aux_temp.name[16] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1374:12: error: expected expression
*( _OWORD *)aux_temp.name = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/patterns/dfa.c:1374:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.name = 0LL; 
   ^
28 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_end/src/obj/3/dfa.o] Error 1
